Add Budget Planner App

--- a/projects.html
+++ b/projects.html
@@ -77,25 +77,26 @@
 
     <div class="container">
 
-        <!-- Crypt Raider -->
+        <!-- Budget Planner -->
         <div class="row">
             <div class="box">      
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center"> <strong>Crypt Raider</strong> 3D Puzzle Demo - Personal Project</h2>
-                    <h2 class="intro-text text-center"> <strong>C++ | Game Dev | Unreal Engine 5 | UE5 Blueprints</strong></h2>
+                    <h2 class="intro-text text-center"> <strong>Budget Planner</strong> iOS/Android Mobile App </h2>
+                    <h2 class="intro-text text-center"> <strong>JavaScript | React Native | Google Firebase Baas | Expo</strong></h2>
                     <hr>
-                    <a href="projects/crypt-raider.html">
-                        <img class="img-responsive img-border img-left" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                    <a href="projects/budget-planner.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Transaction Tracker/Withdrawls_Screen.png" alt="">
                     </a>
                     <hr class="visible-xs">
-                    <p>Released April 2023</p>
-                    <p>Crypt Raider is a 3D demo project made in Unreal Engine 5 programmed with C++ and Unreal Engine 5's visual scripting system,
-                         Blueprints. The <strong>goal</strong> of the game is to figure out how to take the golden statue out of the mausoleum.</p>
-                    <a href="projects/crypt-raider.html" class="btn btn-default btn-lg">Read More</a>
+                    <p>Released September 2023</p>
+                    <p>A budget planning mobile app that allows users to track their withdrawls and deposits in order to gain a better understanding
+                        of your money coming in and out.</p>
+                    <a href="projects/budget-planner.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
+
         <!-- Red Knight -->
         <div class="row">
             <div class="box">      
@@ -112,6 +113,26 @@
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It was built by myself and 3 other students with the Unity game engine.</p>
                     <a href="projects/red-knight.html" class="btn btn-default btn-lg">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Crypt Raider -->
+        <div class="row">
+            <div class="box">      
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> <strong>Crypt Raider</strong> 3D Puzzle Demo - Personal Project</h2>
+                    <h2 class="intro-text text-center"> <strong>C++ | Game Dev | Unreal Engine 5 | UE5 Blueprints</strong></h2>
+                    <hr>
+                    <a href="projects/crypt-raider.html">
+                        <img class="img-responsive img-border img-left" src="assets/img/projects/Crypt-Raider/Crypt-Raider-Statue-Held.png" alt="">
+                    </a>
+                    <hr class="visible-xs">
+                    <p>Released April 2023</p>
+                    <p>Crypt Raider is a 3D demo project made in Unreal Engine 5 programmed with C++ and Unreal Engine 5's visual scripting system,
+                         Blueprints. The <strong>goal</strong> of the game is to figure out how to take the golden statue out of the mausoleum.</p>
+                    <a href="projects/crypt-raider.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
