--- a/projects/budget-planner.html
+++ b/projects/budget-planner.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>DJ App - Sam Sherrod</title>
+    <title>2D Platformer - Sam Sherrod</title>
     <link rel="icon" type="image/x-icon" href="../assets/img/about/Sam Profile Picture.jpg?">
 
     <!-- Bootstrap Core CSS -->
@@ -82,59 +82,59 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Ottodecks</strong> - Audio Manipulation Program
+                        <strong>Budget Planning Mobile App</strong>
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
-                        Released March 2022</br />
-                        Student Solo Object Oriented Programming Project<br />
+                        Released September 2023<br />
+                        Student Mobile Development Project<br />
                     </p> 
 
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Volume Up.png" alt="">
+                    <a href="../assets/img/projects/Transaction Tracker/Withdrawls_Screen.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Withdrawls_Screen.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Default.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Default.png" alt="">
+                    <a href="../assets/img/projects/Transaction Tracker/Deposits_Screen.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Deposits_Screen.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Track Waveform.png" alt="">
+                    <a href="../assets/img/projects/Transaction Tracker/Recent_Withdrawls.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Recent_Withdrawls.png" alt="">
                     </a>
-                    <a href="../assets/img/projects/Ottodecks/Ottodecks Playlist.png">
-                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Ottodecks/Ottodecks Playlist.png" alt="">
+                    <a href="../assets/img/projects/Transaction Tracker/New_Withdrawl.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/New_Withdrawl.png" alt="">
+                    </a>
+                    <a href="../assets/img/projects/Transaction Tracker/Error_Handling.png">
+                        <img class="img-responsive img-border img-left" src="../assets/img/projects/Transaction Tracker/Error_Handling.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
-
-                    <p>This is an audio application that allows you to manipulate music tracks as a DJ would. </p>
-                    <p>I was the sole developer on this project, which was for an object oriented programming course at the University of London using C++ and the JUCE library. I 
-                        extended the application beyond the class requirements by improving the GUI including two DJ decks, sliders, buttons, a volume and speed
-                        control, and the ability to scroll through each track by displaying it as a waveform.</p>
-                    <p>It contains multiple classes with constructors that interact with one another, references, pointers, and header files for each cpp file.
-
-                    <p><strong>Features include:</strong>
-                        <ul>
-                            <li>creating a playlist by loading audio files into it</li>
-                            <li>uploading a separate music track from the playlist onto each of the two deck instances for manipulation</li>
-                            <li>functionality to change the volume and speed of each track playing</li>
-                            <li>functionality to change the speed of each track playing</li>
-                            <li>the ability to scroll through a track that's loaded onto a deck</li>
-                            <li>search the playlist for a particular track</li>
-                            <li>add or delete tracks from the playlist</li>
-                            <li>independently Play, Pause, Stop, or Reset a track that's loaddd onto a deck</li>
-                            <li>view the the name and length of each track that is playing in seconds.</li>
-                        </ul>
+                    <p>
+                        This was a mobile app I made for the University of London. It allows a user to create withdrawl and deposit transactions to help
+                        users track their budgets. Users can add, update, or delete each transaction. The data is stored on a realtime database using
+                        Google Firebase. Handles errors if newly added or updated transactions are not created correctly, or if the database is not
+                        working correctly. Users can also view any transactions in the last 7 days by clicking on the Recents button.
                     </p>
 
                     <p><strong>Technologies used:</strong>
                         <ul>
-                            <li>C++</li>
-                            <li><a href=" https://juce.com/">JUCE</a></li>
-                            <li>Audio tracks provided by UoL</li>
+                            <li>JavaScript</li>
+                            <li><a href="https://reactnative.dev/docs/getting-started">React Native</a></li>
+                            <li><a href="https://docs.expo.dev/">Expo</a></li>
+                            <li><a href="https://firebase.google.com/">Google Firebase Backend-as-a-service (Baas)</a></li>
                         </ul>
                     </p>
 
-                    <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
-                        concerns. It is also not viewable online. If you would like to see the code for this, please <a href="../contact.html"><strong>contact</strong></a> me.</p>
+                    <br>
+                    <p><strong>Click the button below to interact with the project on Expo and view the source code.</strong></p>
+                    <a href="https://snack.expo.dev/@samsherrod/budget-planning-app" target="_blank" class="btn btn-default btn-lg">View Project</a>
+
+                    <br>
+                    <br>
+                    <p><strong>How to use Expo:</strong></p>
+                        <ul>
+                            <li>On the right side of the screen, lick on Web, iOS, or Android, to interact with the app. If the Tap to Play button appears,
+                                 click it, and wait for it to load.</li>
+                        </ul>
+
                 </div>
             </div>
         </div>
