--- a/about.html
+++ b/about.html
@@ -97,10 +97,9 @@
                     coupled with a computer science background. I have real world skills of team leadership, communication,
                     and decision making, and an excellent understanding of accounting, and finance.</p>
                 
-                <p>I'm a final year bachelors of computer science student at the University of London graduating
-                    in September, 2023 with a gpa of 4.0 (First class Honours). I am actively looking to join 
-                    a AAA studio to collaborate with, and learn all aspects of software development within the games 
-                    industry.</p>
+                <p>I've recently finished by Bachelors degree in computer science from the University of London, as of
+                    September, 2023 with a gpa of 4.0 (First class Honours). I am actively looking to join a AAA studio to
+                    collaborate with, and learn all aspects of software development within the games industry.</p>
 
                 <p>If you would like to connect, please view the 
                     <strong><a href="contact.html">contact</a></strong>
