Edit YouTube Budget Planner link

--- a/projects/budget-planner.html
+++ b/projects/budget-planner.html
@@ -128,7 +128,7 @@
                     <br>
                     <p><strong>Click the button below to interact with the project on Expo and view the source code.</strong></p>
                     <a href="https://snack.expo.dev/@samsherrod/budget-planning-app" target="_blank" class="btn btn-default btn-lg">View Project</a>
-                    <a href="www.youtube.com/watch?v=AuOT4lDmO20" target="_blank" class="btn btn-default btn-lg">Watch on YouTube</a>
+                    <a href="https://www.youtube.com/watch?v=AuOT4lDmO20" target="_blank" class="btn btn-default btn-lg">Watch on YouTube</a>
 
                     <br>
                     <br>
